[tool.poetry]
name = "pyopengl-sandbox"
version = "0.1.0"
description = ""
authors = ["aapman55 <zhi-li_liu@live.nl>"]
readme = "README.md"
packages = [{include = "pyopengl_sandbox"}]

[tool.poetry.dependencies]
python = "^3.10"
PyOpenGL = "^3.1.7"
glfw = "^2.6.5"

[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
mypy = "^1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
